# geny-2d-avatar

./: .env.example  .gitignore  .gitleaks.toml  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/: README.md
archive/: README.md
docs/: 00-GOAL.md  01-RIG-PRESET.md  02-TEXTURE-PIPELINE.md  02-system-architecture.md  03-ARCHITECTURE.md  03-rig-template-spec.md  04-ROADMAP.md  05-EXECUTION-PLAN.md  06-PRESET-AUTHORING-GUIDE.md  06-post-processing-pipeline.md  08-validation-and-rendering.md  11-export-and-deployment.md  13-tech-stack.md  15-quality-assurance.md  16-monetization-licensing-ip.md  17-risks-and-mitigation.md  18-glossary.md  PRODUCT-BETA.md  ROADMAP-BETA.md  RX-PER-DRAWABLE-EDITOR-PLAN.md  UX-BETA-WIREFRAME.md  index.md
infra/: README.md
progress/: INDEX.md  SESSION_TEMPLATE.md
progress_0420/: INDEX.md  PLAN.md  SUMMARY.md
rig-templates/: README.md
samples/: README.md
schema/: README.md
scripts/: README.md  mock-vendor-server.mjs  mock-vendor-server.test.mjs  observability-e2e.mjs  observability-fallback-validate.mjs  observability-fallback-validate.test.mjs  observability-smoke.mjs  observability-smoke.test.mjs  observability-snapshot-diff.mjs  perf-harness.mjs  perf-harness.test.mjs  perf-sweep-concurrency.mjs  probe-all-tabs-fit.mjs  probe-cm-api.mjs  probe-fhd-layout.mjs  probe-hide-mechanism.mjs  probe-internal-model-events.mjs  probe-render-state.mjs  probe-stale-state.mjs  repro-eye-vs-rgb.mjs  repro-preview-issue.mjs  repro-rgb-alpha.mjs  repro-tab-cycle.mjs  repro-tab-switch.mjs  (+10 more)
(+624 files in other folders)
